MDEV-5298 Illegal mix of collations on timestamp Fixed.